--- a/lib/codemirror.css
+++ b/lib/codemirror.css
@@ -95,7 +95,7 @@
 
 .cm-invalidchar {color: #f00;}
 
-div.CodeMirror span.CodeMirror-matchingbracket {color: #0f0;}
+div.CodeMirror span.CodeMirror-matchingbracket {/*color: #0f0;*/}
 div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 
 /* STOP */
